--- a/src/app/pages/projects/create/type/body-legal/body-legal.component.html
+++ b/src/app/pages/projects/create/type/body-legal/body-legal.component.html
@@ -59,17 +59,28 @@
                                 </tr>
                             </thead>
                             <tbody>
-                                <tr *ngFor="let data of InstallationDatas" id="lj_{{data.id}}">
+                                <tr *ngFor="let data of BodyLegalDatas" id="lj_{{data.normaId}}">
                                     <!--<th scope="row">
                                         <div class="form-check">
                                             <input class="form-check-input" type="checkbox" name="checkAll"
                                                 value="{{data.id}}" [(ngModel)]="data.state">
                                         </div>
                                     </th>-->
-                                    <td><h4>{{data.norma}}</h4><h5>{{data.titulo}}</h5>{{data.subtitulo}}</td>
-                                    <td><ngb-highlight [result]="data.descripcion"
-                                            [term]="service.searchTerm"></ngb-highlight></td>
-                                    <td>Publicado el {{data.publicado}}<br>Vigencia: {{data.vigencia}}</td>
+                                    <td>
+                                        <h4>{{data.identificador ? data.identificador.tipoNorma+' '+data.identificador.numero : ''}}</h4>
+                                        <h5>{{data.tituloNorma ? data.tituloNorma : ''}}</h5>
+                                        <ng-container *ngFor="let org of data.organismos">
+                                            {{org}}
+                                        </ng-container>
+                                    </td>
+                                    <td>
+                                        <ngb-highlight [result]="data.encabezado ? data.encabezado.texto.substr(0,400)+'...' : ''"
+                                            [term]="service.searchTerm">
+                                        </ngb-highlight></td>
+                                    <td>
+                                        Publicado el {{data.dates ? data.dates.fechaPublicacionNorma : ''}}<br>
+                                        Vigencia: {{data.dates ? data.dates.fechaVencimientoNorma : ''}}
+                                    </td>
                                     <td class="status"><span
                                                 class="badge badge-soft-{{data.conectado ? 'success' : 'danger'}} text-uppercase">{{data.conectado ? data.conectado : 'No conectado'}}</span>
                                     </td>
@@ -77,7 +88,7 @@
                                         
                                         <div class="d-flex gap-2">
                                             <div class="edit">
-                                                <button class="btn btn-sm btn-success edit-item-btn" routerLink="/projects/{{project_id}}/type/bodylegal/{{data.id}}/Detail"
+                                                <button class="btn btn-sm btn-success edit-item-btn" routerLink="/projects/{{project_id}}/type/bodylegal/{{data.normaId}}/Detail"
                                                     >Conectar</button>
                                             </div>
                                         </div>
@@ -114,33 +125,5 @@
     <!-- end col -->
 </div>
 <!-- end row -->
-
-<!-- removeItemModal -->
-<ng-template #deleteModel let-modal>
-    <div class="modal-content">
-        <div class="modal-header">
-            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar" id="btn-close"
-                (click)="modal.dismiss('Cross click')"></button>
-        </div>
-        <div class="modal-body">
-            <div class="mt-2 text-center">
-                <lord-icon src="https://cdn.lordicon.com/gsqxdxog.json" trigger="loop"
-                    colors="primary:#405189,secondary:#f06548" style="width:90px;height:90px"></lord-icon>
-                <div class="mt-4 pt-2 fs-15 mx-4 mx-sm-5">
-                    <h4>Está a punto de eliminar este registro?</h4>
-                    <p class="text-muted mx-4 mb-0">Eliminar su registro eliminará toda su información de nuestro
-sistema.</p>
-                </div>
-            </div>
-            <div class="d-flex gap-2 justify-content-center mt-4 mb-2">
-                <button class="btn btn-link link-success fw-medium text-decoration-none" data-bs-dismiss="modal"
-                    (click)="modal.close('Close click')"><i class="ri-close-line me-1 align-middle"></i> Cerrar</button>
-                <button type="button" class="btn w-sm btn-danger " id="delete-product" (click)="deleteData(deleteId)"
-                    (click)="modal.close('Close click')">Si, Remover!</button>
-            </div>
-        </div>
-    </div><!-- /.modal-content -->
-</ng-template>
-
 
 <app-toastsp aria-live="polite" aria-atomic="true"></app-toastsp>
