--- a/src/app/pages/projects/create/type/body-legal/detail/body-legal-detail.component.html
+++ b/src/app/pages/projects/create/type/body-legal/detail/body-legal-detail.component.html
@@ -2,7 +2,6 @@
 <app-breadcrumbs title="Paso 4: Conecta la normativa a tus procesos" [breadcrumbItems]="breadCrumbItems"></app-breadcrumbs>
 <!-- End Breadcrumbs -->
 
-
 <!--preloader-->
 <div id="preloader" style="opacity: 0px !important;background-color: #000 !important;visibility: hidden;">
     <div id="status">
@@ -54,20 +53,23 @@
                 <span></span>
                 </span>
             </span>
-            <h6 class="card-title">DS N°43 Reglamento de almacenamiento de sustancias peligrosas</h6>
-            <p class="card-subtitle text-muted mb-0">Ministerio de Salud</p>
+            <h6 class="card-title">{{detail.identificador ? detail.identificador.tipoNorma+' '+detail.identificador.numero : ''}} {{detail.tituloNorma ? detail.tituloNorma : ''}}</h6>
+            
+            <ng-container *ngFor="let org of detail.organismos">
+                <p class="card-subtitle text-muted mb-0">{{org}}</p>
+            </ng-container>
         </div>
         <div class="card-body">
             <div class="row">
                 <div class="col-xxl-6 col-lg-6">
                     <p><b>Descripción</b></p>
-                    <p>Establece las condiciones de seguridad para instalaciones de almacenamiento de sustancias peligrosas, tales como bodega, estanques, silos, isotanques y otras.</p>
+                    <p>{{detail.encabezado ? detail.encabezado.texto : ''}}</p>
                 </div>
                 <div class="col-xxl-6 col-lg-6">
                     <p><b>Características</b></p>
-                    <p>Publicado:</p>
-                    <p>Entrada de vigencia:</p>
-                    <p>Última modificación:</p>
+                    <p>Publicado: {{detail.dates ? detail.dates.fechaPublicacionNorma : ''}}</p>
+                    <p>Entrada de vigencia: {{detail.dates ? detail.dates.fechaPublicacionNorma : ''}}</p>
+                    <p>Última modificación: {{detail.dates ? detail.dates.fechaPublicacionNorma : ''}}</p>
                     <p>Vigencia:</p>
                     <p>Ámbito:</p>
                     <p>Alcance terriotorial:</p>
@@ -103,39 +105,30 @@
             <ngx-simplebar class="mt-3 mx-n4 px-4 file-menu-sidebar-scroll">
                 <ul class="list-unstyled file-manager-menu">
                     <li>
-                        <a data-bs-toggle="collapse" href="javascript:void(0);" role="button" aria-expanded="true"
-                            aria-controls="collapseExample" (click)="collapse.toggle()"
-                            [attr.aria-expanded]="!isCollapsed">
+                        <a href="javascript:void(0);" (click)="changeProducts($event, 'Encabezado', null)">
                             <i class="ri-file-list-2-line align-bottom me-2"></i> <span class="file-list-link">Encabezado</span>
                         </a>
+                    </li>
+                    <li *ngFor="let est of detail.EstructurasFuncionales; let i = index;">
+                        <a data-bs-toggle="collapse" href="javascript:void(0);" (click)="changeProducts($event, est.idParte, i)" role="button" aria-expanded="true"
+                        aria-controls="collapseExample"
+                        [attr.aria-expanded]="!isCollapsed[est.idParte]" *ngIf="est.EstructurasFuncionales"><i
+                                class="ri-file-list-2-line align-bottom me-2"></i> <span
+                                class="file-list-link">{{est.tipoParte}}</span>
+                        </a>
+                        
                         <div class="collapse show" id="collapseExample" #collapse="ngbCollapse"
-                            [(ngbCollapse)]="isCollapsed">
+                            [(ngbCollapse)]="isCollapsed[est.idParte]" *ngIf="est.EstructurasFuncionales">
                             <ul class="sub-menu list-unstyled">
-                                <li>
-                                    <a href="javascript:void(0);">Título I</a>
-                                </li>
-                                <li>
-                                    <a href="javascript:void(0);">Título II</a>
-                                </li>
-                                <li>
-                                    <a href="javascript:void(0);">Título III</a>
+                                <li *ngFor="let est2 of est.EstructurasFuncionales; let i2 = index;">
+                                    <a href="javascript:void(0);">{{est2.tipoParte}}</a>
                                 </li>
                             </ul>
                         </div>
-                    </li>
-                    <li>
-                        <a href="javascript:void(0);" (click)="changeProducts($event,'Documents')"><i
-                                class="ri-file-list-2-line align-bottom me-2"></i> <span
-                                class="file-list-link">Párrafo 1°</span></a>
-                    </li>
-                    <li>
-                        <a href="javascript:void(0);" (click)="changeProducts($event,'Media')"><i
-                            class="ri-file-list-2-line align-bottom me-2"></i> <span
-                                class="file-list-link">Párrafo 2°</span></a>
-                    <li>
-                        <a href="javascript:void(0);" (click)="changeProducts($event,'Recents')"><i
-                            class="ri-file-list-2-line align-bottom me-2"></i> <span
-                                class="file-list-link">Párrafo 3°</span></a>
+
+                        <a href="javascript:void(0);" (click)="changeProducts($event, est.idParte, i)" *ngIf="!est.EstructurasFuncionales">
+                            <i class="ri-file-list-2-line align-bottom me-2"></i> <span class="file-list-link">{{est.tipoParte}}</span>
+                        </a>
                     </li>
                 </ul>
             </ngx-simplebar>
@@ -145,16 +138,28 @@
         <ngx-simplebar class="mx-n3 pt-4 px-4 file-manager-content-scroll">
             <div>
 
-                <ng-container *ngFor="let data of recentDatas">
+                <div class="col-xxl-12" id="r-Encabezado" *ngIf="showEncabezado">
+                    <div class="card border card-border-primary" style="border-radius: 24px !important;">
+                        <div class="row g-0">
+                            <div class="col-md-12">
+                                <div class="card-body">
+                                    {{detail.encabezado ? detail.encabezado.texto : ''}}  
+                                </div>
+                            </div>
+                        </div>
+                    </div><!-- end card -->
+                    </div><!-- end col -->
+
+                <ng-container *ngFor="let data of articulosDatas">
                     
-          <div class="col-xxl-12" id="r-{{data.id}}">
+          <div class="col-xxl-12" id="r-{{data.idParte}}">
             <div class="card border card-border-primary" style="border-radius: 24px !important;">
                 <div class="row g-0">
                     <div class="col-md-10">
                         <div class="card-body">
                             
-                            <h5 class="card-title mb-0">Artículo 5</h5>
-                            <p class="card-text mb-2">For that very reason, I went on a quest and spoke to many different professional graphic designers and asked them what graphic design tips they live.</p>
+                            <h5 class="card-title mb-0">{{data.tipoParte}}</h5>
+                            <p class="card-text mb-2">{{data.texto}}</p>
                             <p class="card-text"><small class="text-danger"><b>Ver texto completo</b></small></p>
                         </div>
                     </div>
@@ -168,7 +173,7 @@
                     justify-items: center;
                     align-items: center;">
                         <button class="btn btn-success createFile-modal" data-bs-toggle="modal"
-                        data-bs-target="#createFileModal" (click)="openRecentModal(recentContent)"><!--<i
+                        data-bs-target="#createFileModal"><!--<i
                             class="ri-add-line align-bottom me-1"></i>--> Conectar</button>
                     </div>
                 </div>
@@ -181,109 +186,4 @@
     </div>
     </div>
 
-<!-- Create Folder Model -->
-<ng-template #content role="document" let-modal>
-    <div class="modal-header p-3 bg-soft-success">
-        <h5 class="modal-title" id="createFolderModalLabel">Create Folder</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" id="addFolderBtn-close" aria-label="Close"
-            (click)="modal.dismiss('Cross click')"></button>
-    </div>
-    <div class="modal-body">
-        <form autocomplete="off" class="needs-validation createfolder-form" id="createfolder-form" novalidate
-            (ngSubmit)="saveFolder()" [formGroup]="folderForm">
-            <div class="mb-4">
-                <label for="foldername-input" class="form-label">Folder Name</label>
-                <input type="text" class="form-control" id="foldername-input" required placeholder="Enter folder name"
-                    formControlName="title" [ngClass]="{ 'is-invalid': submitted && form['title'].errors }">
-                <div class="invalid-feedback">Please enter a folder name.</div>
-                <input type="hidden" class="form-control" id="folderid-input" value="" placeholder="Enter folder name">
-            </div>
-            <div class="hstack gap-2 justify-content-end">
-                <button type="button" class="btn btn-ghost-success" data-bs-dismiss="modal"
-                    (click)="modal.close('Close click')"><i class="ri-close-line align-bottom"></i> Close</button>
-                <button type="submit" class="btn btn-primary" id="addNewFolder">Add Folder</button>
-            </div>
-        </form>
-    </div>
-</ng-template>
-
-<!-- Delete Folder Model -->
-<ng-template #deleteModel let-modal>
-    <div class="modal-content">
-        <div class="modal-header">
-            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" id="btn-close"
-                (click)="modal.dismiss('Cross click')"></button>
-        </div>
-        <div class="modal-body">
-            <div class="mt-2 text-center">
-                <lord-icon src="https://cdn.lordicon.com/gsqxdxog.json" trigger="loop"
-                    colors="primary:#f7b84b,secondary:#f06548" style="width:90px;height:90px"></lord-icon>
-                <div class="mt-4 pt-2 fs-15 mx-4 mx-sm-5">
-                    <h4>Are you sure ?</h4>
-                    <p class="text-muted mx-4 mb-0">Are you sure you want to remove this folder ?</p>
-                </div>
-            </div>
-            <div class="d-flex gap-2 justify-content-center mt-4 mb-2">
-                <button class="btn btn-link link-success fw-medium text-decoration-none" data-bs-dismiss="modal"
-                    (click)="modal.close('Close click')"><i class="ri-close-line me-1 align-middle"></i> Close</button>
-                <button type="button" class="btn w-sm btn-danger" id="remove-folderList" (click)="deleteData(deleteId)"
-                    (click)="modal.close('Close click')">Yes, Delete It!</button>
-            </div>
-        </div>
-    </div><!-- /.modal-content -->
-</ng-template>
-
-<!--== Recent File ==-->
-<!-- Create Recent Model -->
-<ng-template #recentContent role="document" let-modal>
-    <div class="modal-header p-3 bg-soft-success">
-        <h5 class="modal-title" id="createFileModalLabel">Create File</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" id="addFileBtn-close" aria-label="Close"
-            (click)="modal.dismiss('Cross click')"></button>
-    </div>
-    <div class="modal-body">
-        <form autocomplete="off" class="needs-validation createfile-form" id="createfile-form" novalidate
-            (ngSubmit)="saveRecent()" [formGroup]="recentForm">
-            <input type="hidden" name="id" value="" formControlName="ids" />
-            <div class="mb-4">
-                <label for="filename-input" class="form-label">File Name</label>
-                <input type="text" class="form-control" id="filename-input" value="" required
-                    placeholder="Enter file name" formControlName="icon_name"
-                    [ngClass]="{ 'is-invalid': submitted && form1['icon_name'].errors }">
-                <div class="invalid-feedback">Please enter a file name.</div>
-                <input type="hidden" class="form-control" id="fileid-input" value="" placeholder="Enter file name">
-            </div>
-            <div class="hstack gap-2 justify-content-end">
-                <button type="button" class="btn btn-ghost-success" data-bs-dismiss="modal"><i
-                        class="ri-close-line align-bottom"></i> Close</button>
-                <button type="submit" class="btn btn-primary" id="addNewFile">Create</button>
-            </div>
-        </form>
-    </div>
-</ng-template>
-
-<!-- Delete Recent Model -->
-<ng-template #deleteRecentModel let-modal>
-    <div class="modal-content">
-        <div class="modal-header">
-            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" id="btn-close"
-                (click)="modal.dismiss('Cross click')"></button>
-        </div>
-        <div class="modal-body">
-            <div class="mt-2 text-center">
-                <lord-icon src="https://cdn.lordicon.com/gsqxdxog.json" trigger="loop"
-                    colors="primary:#f7b84b,secondary:#f06548" style="width:90px;height:90px"></lord-icon>
-                <div class="mt-4 pt-2 fs-15 mx-4 mx-sm-5">
-                    <h4>Are you sure ?</h4>
-                    <p class="text-muted mx-4 mb-0">Are you sure you want to remove this folder ?</p>
-                </div>
-            </div>
-            <div class="d-flex gap-2 justify-content-center mt-4 mb-2">
-                <button class="btn btn-link link-success fw-medium text-decoration-none" data-bs-dismiss="modal"
-                    (click)="modal.close('Close click')"><i class="ri-close-line me-1 align-middle"></i> Close</button>
-                <button type="button" class="btn w-sm btn-danger" id="remove-folderList"
-                    (click)="deleteRecentData(deleteId)" (click)="modal.close('Close click')">Yes, Delete It!</button>
-            </div>
-        </div>
-    </div><!-- /.modal-content -->
-</ng-template>
+<app-toastsp aria-live="polite" aria-atomic="true"></app-toastsp>
