--- a/src/app/pages/projects/create/evaluation/task-control/task-control.component.html
+++ b/src/app/pages/projects/create/evaluation/task-control/task-control.component.html
@@ -185,7 +185,7 @@
                             <div class="list-group" *ngIf="!showDetailEvaluation"><!-- *ngIf="hallazgos.lenght > 0"-->
                                 <!--<ng-container *ngFor="let ig of installations_group | filter:term2">-->
                   
-                                    <ng-container *ngFor="let h of hallazgos;">
+                                    <ng-container *ngFor="let h of evaluations;">
 
                                     <div class="team-list list-view-filter row" style="cursor:pointer;" (click)="viewEvaluation(h)"> 
                                         <div class="col">
@@ -587,7 +587,7 @@
                 <label for="hallazgo-field" class="form-label">Hallazgo</label>
                 <select class="form-select mb-3" aria-label="Hallazgo" formControlName="evaluationFindingId" placeholder="Seleccione Hallazgo">
                     <option selected>Seleccione Hallazgo </option>
-                    <option *ngFor="let h of hallazgos;" value="{{h.findings.id}}">{{'('+h.findings.id.toString().padStart(6,"H-000")+')'+h.findings.nombre}}</option>
+                    <option *ngFor="let h of hallazgos;" value="{{h.id}}">{{'('+h.id.toString().padStart(6,"H-000")+')'+h.nombre}}</option>
                 </select>
                 <!--<ngx-simplebar style="height: 80px;">
                     <ul class="list-unstyled vstack gap-2 mb-0">
