--- a/src/app/pages/projects/create/evaluation/task/task_old.component.html
+++ b/src/app/pages/projects/create/evaluation/task/task_old.component.html
@@ -29,96 +29,51 @@
     </div>
 </div>
 
-<form [formGroup]="evaluacionForm" class="tablelist-form">
-    <div class="row">
-        <div class="col-lg-12">
-            <div class="card">
-                <div class="card-body">
-                    
-              <div class="row g-4 mb-3">
-                <div class="col-sm">
-                    <h4 style="color: #405189;"><b>EVALUACIÓN</b></h4>
-                </div>
-                <div class="col-sm-auto">
-                </div>
-              </div>
-              
-              <div class="row g-0">
-                <div class="col-md-12">
-                    <div class="card-body">
-                        <h6>1. Determina el estado del cumplimiento.</h6>
-                        <select class="form-select" style="background-color: #F3F6F9;border: 0.621px solid #F3F6F9;width: 400px;" placeholder="Seleccione Cumplimiento" formControlName="estado_evaluacion" data-choices data-choices-search-false
-                                    id="choices-priority-input2" (change)="changeStatus($event)">
-                                    <option value="" selected>Seleccione Cumplimiento</option>
-                                    <option value="CUMPLE">Cumple</option>
-                                    <option value="CUMPLE PARCIALMENTE">Cumple parcial</option>
-                                    <option value="NO CUMPLE">No cumple</option>
-                        </select>
-                    </div>
-                </div>
-              </div>
-    
-              <div class="row g-0">
-                <div class="col-md-12">
-                    <div class="card-body">
-                        <h6>2. Define una fecha de evaluación.</h6>
-                        <div class="form-icon right" style="width: 400px;">
-                            <input class="form-control form-control-icon flatpickr-input" type="text" placeholder="Fecha de evaluación" formControlName="fecha_evaluacion" mwlFlatpickr [altInput]="true" [convertModelValue]="true" [dateFormat]="'d-m-y'" [maxDate]="modelValueAsDate">
-                            <i class="ri-calendar-todo-fill"></i>
-                        </div>
-                    </div>
-                </div>
-              </div>
-              
-              <div class="row g-0">
-                <div class="col-md-12">
-                    <div class="card-body">
-                        <h6>3. Agrega tus comentarios.</h6>
-                        <ckeditor [editor]="Editor" data="" formControlName="comentario"></ckeditor>
-                    </div>
-                </div>
-              </div>
+<div class="row">
+    <div class="col-lg-12">
+        <div class="card">
+        <div class="card-body">
                 
-                <div class="row g-0">
-                    <div class="col-md-12">
-                        <div class="card-body">
-                            <h6>4. Carga tu evidencia.</h6>
-                            <dropzone class="dropzone_sec" [message]="'Haz Click o arrastra la imagen a cargar'" [config]="{ previewsContainer: '#myPreviewsContainer' }" (success)="onFileSelectedEvaluation($event)">
-                            </dropzone>
-                            <div class="table table-striped files" style="display: none;" id="myPreviewsContainer">
-                            </div>
-                            <div class="table table-striped" *ngIf="imgEvaluations.length > 0">
-                                <ul _ngcontent-eyd-c348="" class="list-unstyled vstack gap-4">
-                                    <li _ngcontent-eyd-c348="" style="
-                                    border: 1px solid #C6C6C6;
-                                    margin-top: 10px;" *ngFor="let im of imgEvaluations; let i = index">
-                                        <div _ngcontent-eyd-c348="" class="d-flex align-items-center">
-                                            <div _ngcontent-eyd-c348="" class="flex-shrink-0">
-                                                <div _ngcontent-eyd-c348="" class="avatar-xs">
-                                                    <div _ngcontent-eyd-c348="" class="avatar-title">
-                                                        <img src="{{im.imagen}}" width="32" height="32" style="width: 32px; height: 32px;" />
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <div _ngcontent-eyd-c348="" class="flex-grow-1 ms-3">
-                                                <h5 _ngcontent-eyd-c348="" class="mb-1 fs-15">{{im.name}}</h5>
-                                                <p _ngcontent-eyd-c348="" class="mb-0 fs-12 text-muted">{{im.size}}</p>
-                                            </div>
-                                            <button class="btn btn-danger edit-item-btn d-sm-flex align-items-center justify-content-end" (click)="deleteEvaluationImg(i)">Quitar</button>
-                                        </div>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-    
+          <div class="row g-4 mb-3">
+            <div class="col-sm">
+                <h4 style="color: #405189;"><b>EVALUACIÓN</b></h4>
             </div>
+
+          </div>
+          
+          <div class="row g-0 mb-3">
+            <div class="col-md-6">
+                    <h6 style="color: #405189;"><b>ESTADO</b></h6>
+                    
+                    <div class="col-lg-2 col">
+                        <span class="badge" [ngClass]="{'text-bg-danger': (!articulo.evaluations || !articulo.evaluations.estado) || (articulo.evaluations && articulo.evaluations.estado  == 'NO CUMPLE'), 'text-bg-success': articulo.evaluations && articulo.evaluations.estado  && articulo.evaluations.estado  == 'CUMPLE', 'text-bg-warning': articulo.evaluations && articulo.evaluations.estado  && articulo.evaluations.estado  == 'CUMPLE PARCIALMENTE'}">{{ articulo.evaluations && articulo.evaluations.estado  ? articulo.evaluations.estado  : 'NO EVALUADO' }}</span>
+                    </div>
+            </div>
+            
+            <div class="col-md-6">
+                <h6 style="color: #405189;"><b>FECHA EVALUACIÓN</b></h6>
+                {{articulo.evaluations && articulo.evaluations.fecha_evaluacion ? (articulo.evaluations.fecha_evaluacion | date:"dd-MM-yy" ) : '-' }}
+            </div>
+            </div>
+
+            <div class="row g-0 mb-3">
+                <div class="col-md-6">
+                        <h6 style="color: #405189;"><b>EVIDENCIA CARGADA</b></h6>
+                        <img [src]="articulo.evaluations ? articulo.evaluations.evaluacionImg : ''
+                                            " (error)="imgError($event)" alt="Hallazgo respaldo"
+                                            class="users-avatar-shadow avatar mr-3" height="64" width="64">
+                </div>
+                
+                <div class="col-md-6">
+                    <h6 style="color: #405189;"><b>COMENTARIO</b></h6>                    
+                    <p>{{articulo.evaluations ? articulo.evaluations.comentario : ''}}</p>
+                </div>
+                </div>
+
+        </div>
         </div>
     </div>
-    </div>
-    
-    </form>
+</div>
 
 <div class="row"><!-- *ngIf="status == 'NO CUMPLE' || status == 'CUMPLE PARCIALMENTE'"-->
     <div class="col-lg-12">
